FELIX-5690 : ConfigurationHandler should support ignoring whitespace between property key/equal sign & equal sign/property value. Apply modified patch from Joshua Mack