@@ -76,6 +76,7 @@ public class ConfigurationHandler
     protected static final int TOKEN_VAL_CLOS = '"'; // '}';
 
     protected static final int TOKEN_COMMENT = '#';
+    private static final int TOKEN_SPACE = ' ';
 
     // simple types (string & primitive wrappers)
     protected static final int TOKEN_SIMPLE_STRING = 'T';
@@ -114,24 +115,24 @@ public class ConfigurationHandler
         type2Code = new HashMap<Class<?>, Integer>();
 
         // simple (exclusive String whose type code is not written)
-        type2Code.put( Integer.class, new Integer( TOKEN_SIMPLE_INTEGER ) );
-        type2Code.put( Long.class, new Integer( TOKEN_SIMPLE_LONG ) );
-        type2Code.put( Float.class, new Integer( TOKEN_SIMPLE_FLOAT ) );
-        type2Code.put( Double.class, new Integer( TOKEN_SIMPLE_DOUBLE ) );
-        type2Code.put( Byte.class, new Integer( TOKEN_SIMPLE_BYTE ) );
-        type2Code.put( Short.class, new Integer( TOKEN_SIMPLE_SHORT ) );
-        type2Code.put( Character.class, new Integer( TOKEN_SIMPLE_CHARACTER ) );
-        type2Code.put( Boolean.class, new Integer( TOKEN_SIMPLE_BOOLEAN ) );
+        type2Code.put( Integer.class, Integer.valueOf( TOKEN_SIMPLE_INTEGER ) );
+        type2Code.put( Long.class, Integer.valueOf( TOKEN_SIMPLE_LONG ) );
+        type2Code.put( Float.class, Integer.valueOf( TOKEN_SIMPLE_FLOAT ) );
+        type2Code.put( Double.class, Integer.valueOf( TOKEN_SIMPLE_DOUBLE ) );
+        type2Code.put( Byte.class, Integer.valueOf( TOKEN_SIMPLE_BYTE ) );
+        type2Code.put( Short.class, Integer.valueOf( TOKEN_SIMPLE_SHORT ) );
+        type2Code.put( Character.class, Integer.valueOf( TOKEN_SIMPLE_CHARACTER ) );
+        type2Code.put( Boolean.class, Integer.valueOf( TOKEN_SIMPLE_BOOLEAN ) );
 
         // primitives
-        type2Code.put( Integer.TYPE, new Integer( TOKEN_PRIMITIVE_INT ) );
-        type2Code.put( Long.TYPE, new Integer( TOKEN_PRIMITIVE_LONG ) );
-        type2Code.put( Float.TYPE, new Integer( TOKEN_PRIMITIVE_FLOAT ) );
-        type2Code.put( Double.TYPE, new Integer( TOKEN_PRIMITIVE_DOUBLE ) );
-        type2Code.put( Byte.TYPE, new Integer( TOKEN_PRIMITIVE_BYTE ) );
-        type2Code.put( Short.TYPE, new Integer( TOKEN_PRIMITIVE_SHORT ) );
-        type2Code.put( Character.TYPE, new Integer( TOKEN_PRIMITIVE_CHAR ) );
-        type2Code.put( Boolean.TYPE, new Integer( TOKEN_PRIMITIVE_BOOLEAN ) );
+        type2Code.put( Integer.TYPE, Integer.valueOf( TOKEN_PRIMITIVE_INT ) );
+        type2Code.put( Long.TYPE, Integer.valueOf( TOKEN_PRIMITIVE_LONG ) );
+        type2Code.put( Float.TYPE, Integer.valueOf( TOKEN_PRIMITIVE_FLOAT ) );
+        type2Code.put( Double.TYPE, Integer.valueOf( TOKEN_PRIMITIVE_DOUBLE ) );
+        type2Code.put( Byte.TYPE, Integer.valueOf( TOKEN_PRIMITIVE_BYTE ) );
+        type2Code.put( Short.TYPE, Integer.valueOf( TOKEN_PRIMITIVE_SHORT ) );
+        type2Code.put( Character.TYPE, Integer.valueOf( TOKEN_PRIMITIVE_CHAR ) );
+        type2Code.put( Boolean.TYPE, Integer.valueOf( TOKEN_PRIMITIVE_BOOLEAN ) );
 
         // reverse map to map type codes to classes, string class mapping
         // to be added manually, as the string type code is not written and
@@ -141,7 +142,7 @@ public class ConfigurationHandler
         {
             code2Type.put( entry.getValue(), entry.getKey() );
         }
-        code2Type.put( new Integer( TOKEN_SIMPLE_STRING ), String.class );
+        code2Type.put( Integer.valueOf( TOKEN_SIMPLE_STRING ), String.class );
 
         NAME_CHARS = new BitSet();
         for ( int i = '0'; i <= '9'; i++ )
@@ -327,12 +328,12 @@ public class ConfigurationHandler
      */
     private Object readValue( PushbackReader pr ) throws IOException
     {
-        // read (optional) type code
-        int type = read( pr );
+        // read past any whitespace and (optional) type code
+        int type = ignorableWhiteSpace( pr );
 
-        // read value kind code if type code is not a value kinde code
+        // read value kind code if type code is not a value kind code
         int code;
-        if ( code2Type.containsKey( new Integer( type ) ) )
+        if ( code2Type.containsKey( type ) )
         {
             code = read( pr );
         }
@@ -385,7 +386,7 @@ public class ConfigurationHandler
 
             if ( c == TOKEN_ARR_CLOS )
             {
-                Class<?> type = code2Type.get( new Integer( typeCode ) );
+                Class<?> type = code2Type.get( Integer.valueOf( typeCode ) );
                 Object array = Array.newInstance( type, list.size() );
                 for ( int i = 0; i < list.size(); i++ )
                 {
@@ -465,12 +466,12 @@ public class ConfigurationHandler
             case TOKEN_SIMPLE_FLOAT:
             case TOKEN_PRIMITIVE_FLOAT:
                 int fBits = Integer.parseInt( readQuoted( pr ) );
-                return new Float( Float.intBitsToFloat( fBits ) );
+                return Float.valueOf( Float.intBitsToFloat( fBits ) );
 
             case TOKEN_SIMPLE_DOUBLE:
             case TOKEN_PRIMITIVE_DOUBLE:
                 long dBits = Long.parseLong( readQuoted( pr ) );
-                return new Double( Double.longBitsToDouble( dBits ) );
+                return Double.valueOf( Double.longBitsToDouble( dBits ) );
 
             case TOKEN_SIMPLE_BYTE:
             case TOKEN_PRIMITIVE_BYTE:
@@ -485,7 +486,7 @@ public class ConfigurationHandler
                 String cString = readQuoted( pr );
                 if ( cString != null && cString.length() > 0 )
                 {
-                    return new Character( cString.charAt( 0 ) );
+                    return Character.valueOf( cString.charAt( 0 ) );
                 }
                 return null;
 
@@ -558,6 +559,7 @@ public class ConfigurationHandler
                 case -1: // fall through
 
                 // separator token
+                case TOKEN_SPACE:
                 case TOKEN_EQ:
                 case TOKEN_VAL_CLOS:
                     pr.unread( c );
@@ -789,12 +791,12 @@ public class ConfigurationHandler
         if ( value instanceof Double )
         {
             double dVal = ( ( Double ) value ).doubleValue();
-            value = new Long( Double.doubleToRawLongBits( dVal ) );
+            value = Long.valueOf( Double.doubleToRawLongBits( dVal ) );
         }
         else if ( value instanceof Float )
         {
             float fVal = ( ( Float ) value ).floatValue();
-            value = new Integer( Float.floatToRawIntBits( fVal ) );
+            value = Integer.valueOf( Float.floatToRawIntBits( fVal ) );
         }
 
         out.write( TOKEN_VAL_OPEN );
